api/tests/snapshots/mood_routes__mood_selections_empty.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": [],
  "status": 200
}
