api/tests/snapshots/mood_routes__mood_selections_populated.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": [
    {
      "group_name": "Activities",
      "id": 28,
      "name": "Exercise"
    }
  ],
  "status": 200
}
