api/tests/snapshots/mood_routes__routing_moods_trailing_slash.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "error": "Resource not found"
  },
  "status": 404
}
