api/tests/snapshots/mood_routes__statistics_digest_400_bad_month.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "error": "month must be between 1 and 12"
  },
  "status": 400
}
