api/tests/snapshots/mood_routes__statistics_digest_populated.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "average_mood": 3.6666666666666665,
    "entries_logged": 3,
    "longest_streak": 3,
    "month": 8,
    "mood_trend": null,
    "previous_average_mood": null,
    "top_tags": [
      {
        "group_name": "Activities",
        "option_id": 28,
        "option_name": "Exercise",
        "times_selected": 1
      }
    ],
    "year": 2025
  },
  "status": 200
}
