api/tests/snapshots/mood_routes__statistics_extended_empty.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "goal_correlations": [],
    "monthly_digest": {
      "average_mood": null,
      "entries_logged": 0,
      "longest_streak": 0,
      "month": "<CURRENT_MONTH>",
      "mood_trend": null,
      "previous_average_mood": null,
      "top_tags": [],
      "year": "<CURRENT_YEAR>"
    },
    "mood_volatility": {
      "average_mood": null,
      "entry_count": 0,
      "stddev": null,
      "window_days": 30
    },
    "rolling_averages": {
      "count": 0,
      "series": []
    },
    "tag_correlations": [],
    "weekday_averages": [
      {
        "average_mood": null,
        "entry_count": 0,
        "name": "Sunday",
        "weekday": 0
      },
      {
        "average_mood": null,
        "entry_count": 0,
        "name": "Monday",
        "weekday": 1
      },
      {
        "average_mood": null,
        "entry_count": 0,
        "name": "Tuesday",
        "weekday": 2
      },
      {
        "average_mood": null,
        "entry_count": 0,
        "name": "Wednesday",
        "weekday": 3
      },
      {
        "average_mood": null,
        "entry_count": 0,
        "name": "Thursday",
        "weekday": 4
      },
      {
        "average_mood": null,
        "entry_count": 0,
        "name": "Friday",
        "weekday": 5
      },
      {
        "average_mood": null,
        "entry_count": 0,
        "name": "Saturday",
        "weekday": 6
      }
    ]
  },
  "status": 200
}
