api/tests/snapshots/mood_routes__statistics_extended_populated.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "goal_correlations": [],
    "monthly_digest": {
      "average_mood": null,
      "entries_logged": 0,
      "longest_streak": 0,
      "month": "<CURRENT_MONTH>",
      "mood_trend": null,
      "previous_average_mood": null,
      "top_tags": [],
      "year": "<CURRENT_YEAR>"
    },
    "mood_volatility": {
      "average_mood": null,
      "entry_count": 0,
      "stddev": null,
      "window_days": 30
    },
    "rolling_averages": {
      "count": 3,
      "series": [
        {
          "average_mood": 4.0,
          "date": "2025-08-01",
          "entry_count": 1,
          "rolling_30": 4.0,
          "rolling_7": 4.0
        },
        {
          "average_mood": 2.0,
          "date": "2025-08-02",
          "entry_count": 1,
          "rolling_30": 3.0,
          "rolling_7": 3.0
        },
        {
          "average_mood": 5.0,
          "date": "2025-08-03",
          "entry_count": 1,
          "rolling_30": 3.6666666666666665,
          "rolling_7": 3.6666666666666665
        }
      ]
    },
    "tag_correlations": [
      {
        "average_mood_not_selected": 3.5,
        "average_mood_selected": 4.0,
        "entry_count_not_selected": 2,
        "entry_count_selected": 1,
        "group_id": 4,
        "group_name": "Activities",
        "option_id": 28,
        "option_name": "Exercise"
      }
    ],
    "weekday_averages": [
      {
        "average_mood": 5.0,
        "entry_count": 1,
        "name": "Sunday",
        "weekday": 0
      },
      {
        "average_mood": null,
        "entry_count": 0,
        "name": "Monday",
        "weekday": 1
      },
      {
        "average_mood": null,
        "entry_count": 0,
        "name": "Tuesday",
        "weekday": 2
      },
      {
        "average_mood": null,
        "entry_count": 0,
        "name": "Wednesday",
        "weekday": 3
      },
      {
        "average_mood": null,
        "entry_count": 0,
        "name": "Thursday",
        "weekday": 4
      },
      {
        "average_mood": 4.0,
        "entry_count": 1,
        "name": "Friday",
        "weekday": 5
      },
      {
        "average_mood": 2.0,
        "entry_count": 1,
        "name": "Saturday",
        "weekday": 6
      }
    ]
  },
  "status": 200
}
