api/tests/snapshots/mood_routes__statistics_heatmap_400_bad_year.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "error": "year must be an integer"
  },
  "status": 400
}
