api/tests/snapshots/mood_routes__statistics_heatmap_401.snap
---
source: tests/mood_routes.rs
expression: "json!({ \"status\": status, \"body\": actual })"
---
{
  "body": {
    "error": "Authorization header required"
  },
  "status": 401
}
